--- a/wip/css/style_gitbook.css
+++ b/wip/css/style_gitbook.css
@@ -115,3 +115,10 @@ h2 {
     color: #15b7d6;
 }
 
+/* Footer with logo */
+footer {
+    text-align: center;
+}
+footer img {
+    max-height: 40px;
+}
