New look with bs4_book

--- a/css/style_gitbook.css
+++ b/css/style_gitbook.css
@@ -34,7 +34,7 @@
 /* Document formatting*/
 body {
   font-family: "Noto Sans", sans-serif; 
-  font-size: 1.5rem;
+ /* font-size: 1.5rem; */
   text-align: justify;
 }
 
@@ -78,9 +78,10 @@ h3 {
     text-align: center;
 }
 
-.book .book-body .page-wrapper .page-inner section.normal a {
+#content a, .book .book-body .page-wrapper .page-inner section.normal a {
     color: #DE633C;
 }
+
 
 /* thinkr.css 
 .container-fluid.main-container {
@@ -113,6 +114,9 @@ h1 {
 }
 h2 {
     color: #15b7d6;
+}
+.sidebar h2 {
+    color: black;
 }
 
 /* Footer with logo */
